# wl-clip-nim

./: .gitignore  LICENSE  README.md  wl_clip_nim.nimble
build-tools/: compress.nim  decompress.nim
docs/: index.html
example/: example.nim
src/: wlclip.h  wlclip.nim
src/rust/: Cargo.toml
src/rust/libs/aarch64-unknown-linux-gnu/: libwlclip.a.sz
src/rust/libs/x86_64-unknown-linux-gnu/: libwlclip.a.sz
src/rust/src/: lib.rs
test/: wlclip_test.nim
