[package]
name = "wlclip"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "wlclip"
crate-type = ["staticlib", "cdylib"]

[dependencies]
wl-clipboard-rs = { package = "wl-clipboard-rs", version = "0.9" }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"


[profile.release]
opt-level = "z"      # optimize for size
lto = true           # or "thin"
codegen-units = 1    # better optimization
strip = true
panic = "abort"
